--- a/cliente/app/index.html
+++ b/cliente/app/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="styles/menu.css">
     <link rel="stylesheet" href="styles/bootstrap-menu.min.css">
     <link rel="stylesheet" href="styles/datepicker.css">
+    <link rel="stylesheet" href="styles/carona.css">
     <!-- endbuild -->
 
 
@@ -42,8 +43,10 @@
     <script src="scripts/diretivas/datepicker.js"></script>
     <script src="scripts/services/menuService.js"></script>
     <script src="scripts/services/horarioService.js"></script>
+    <script src="scripts/services/caronaService.js"></script>
     <script src="scripts/services/mainService.js"></script>
     <script src="scripts/controllers/menuController.js"></script>
+    <script src="scripts/controllers/caronaController.js"></script>
     <script src="scripts/controllers/mainController.js"></script>
     <script src="scripts/controllers/horarioController.js"></script>
     <script src="scripts/controllers/buscaController.js"></script>
