--- a/cliente/app/index.html
+++ b/cliente/app/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="styles/bootstrap-menu.min.css">
     <link rel="stylesheet" href="styles/datepicker.css">
     <link rel="stylesheet" href="styles/carona.css">
+    <link rel="stylesheet" href="styles/buscar.css">
     <!-- endbuild -->
 
 
@@ -38,6 +39,7 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+  <script src="../bower_components/angularUtils-pagination/dirPagination.js"></script>
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/diretivas/datepicker.js"></script>
@@ -51,6 +53,7 @@
     <script src="scripts/controllers/horarioController.js"></script>
     <script src="scripts/controllers/buscaController.js"></script>
     <script src="scripts/controllers/about.js"></script>
+
 
     <!-- endbuild -->
 </head>
