Tela Team Completa

--- a/cliente/app/index.html
+++ b/cliente/app/index.html
@@ -10,6 +10,8 @@
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/jquery-ui.css" />
+    <link rel="stylesheet" href="../bower_components/bootstrap-social/bootstrap-social.css">
+    <link rel="stylesheet" href="styles/font-awesome-4.6.1/css/font-awesome.css">
     <link rel="stylesheet" href="styles/horario.css">
 
     <!-- build:css(.tmp) styles/main.css -->
@@ -19,8 +21,8 @@
     <link rel="stylesheet" href="styles/datepicker.css">
     <link rel="stylesheet" href="styles/carona.css">
     <link rel="stylesheet" href="styles/buscar.css">
+    <link rel="stylesheet" href="styles/team.css">
     <!-- endbuild -->
-
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
@@ -52,6 +54,7 @@
     <script src="scripts/controllers/mainController.js"></script>
     <script src="scripts/controllers/horarioController.js"></script>
     <script src="scripts/controllers/buscaController.js"></script>
+    <script src="scripts/controllers/teamController.js"></script>
     <script src="scripts/controllers/about.js"></script>
 
 
