View teste notificacao

--- a/cliente/app/index.html
+++ b/cliente/app/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="styles/carona.css">
     <link rel="stylesheet" href="styles/buscar.css">
     <link rel="stylesheet" href="styles/team.css">
+    <link rel="stylesheet" href="styles/notificacao.css">
     <!-- endbuild -->
 
     <!-- build:js(.) scripts/vendor.js -->
