--- a/cliente/app/index.html
+++ b/cliente/app/index.html
@@ -49,6 +49,7 @@
     <script src="scripts/services/menuService.js"></script>
     <script src="scripts/services/horarioService.js"></script>
     <script src="scripts/services/caronaService.js"></script>
+    <script src="scripts/services/notificacaoService.js"></script>
     <script src="scripts/services/mainService.js"></script>
     <script src="scripts/controllers/menuController.js"></script>
     <script src="scripts/controllers/caronaController.js"></script>
@@ -56,6 +57,7 @@
     <script src="scripts/controllers/horarioController.js"></script>
     <script src="scripts/controllers/buscaController.js"></script>
     <script src="scripts/controllers/teamController.js"></script>
+    <script src="scripts/controllers/notificacaoController.js"></script>
     <script src="scripts/controllers/about.js"></script>
 
 
