Modificacoes: Criacao solicitacao Controller

--- a/cliente/app/index.html
+++ b/cliente/app/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="styles/datepicker.css">
     <link rel="stylesheet" href="styles/carona.css">
     <link rel="stylesheet" href="styles/buscar.css">
+    <link rel="stylesheet" href="styles/team.css">
     <link rel="stylesheet" href="styles/notificacao.css">
     <!-- endbuild -->
 
