Organizando os diretorios

--- a/cliente/app/index.html
+++ b/cliente/app/index.html
@@ -11,18 +11,18 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/jquery-ui.css" />
     <link rel="stylesheet" href="../bower_components/bootstrap-social/bootstrap-social.css">
-    <link rel="stylesheet" href="styles/font-awesome-4.6.1/css/font-awesome.css">
-    <link rel="stylesheet" href="styles/horario.css">
+    <link rel="stylesheet" href="styles/lib/font-awesome-4.6.1/css/font-awesome.css">
+    <link rel="stylesheet" href="styles/usuario/horario.css">
 
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/menu.css">
-    <link rel="stylesheet" href="styles/bootstrap-menu.min.css">
-    <link rel="stylesheet" href="styles/datepicker.css">
-    <link rel="stylesheet" href="styles/carona.css">
-    <link rel="stylesheet" href="styles/buscar.css">
-    <link rel="stylesheet" href="styles/team.css">
-    <link rel="stylesheet" href="styles/notificacao.css">
+    <link rel="stylesheet" href="styles/inicio/main.css">
+    <link rel="stylesheet" href="styles/inicio/menu.css">
+    <link rel="stylesheet" href="styles/lib/bootstrap-menu.min.css">
+    <link rel="stylesheet" href="styles/lib/datepicker.css">
+    <link rel="stylesheet" href="styles/usuario/carona.css">
+    <link rel="stylesheet" href="styles/usuario/buscar.css">
+    <link rel="stylesheet" href="styles/inicio/team.css">
+    <link rel="stylesheet" href="styles/usuario/notificacao.css">
     <!-- endbuild -->
 
     <!-- build:js(.) scripts/vendor.js -->
