--- a/cliente/app/index.html
+++ b/cliente/app/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/jquery-ui.css" />
+    <link rel="stylesheet" href="../bower_components/angular-upload/src/directives/btnUpload.min.css" />
     <link rel="stylesheet" href="../bower_components/bootstrap-social/bootstrap-social.css">
     <link rel="stylesheet" href="styles/lib/font-awesome-4.6.1/css/font-awesome.css">
     <link rel="stylesheet" href="styles/usuario/horario.css">
@@ -23,6 +24,7 @@
     <link rel="stylesheet" href="styles/usuario/buscar.css">
     <link rel="stylesheet" href="styles/inicio/team.css">
     <link rel="stylesheet" href="styles/usuario/notificacao.css">
+    <link rel="stylesheet" href="styles/usuario/home.css">
     <!-- endbuild -->
 
     <!-- build:js(.) scripts/vendor.js -->
@@ -40,6 +42,9 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angularUtils-pagination/dirPagination.js"></script>
+    <script src="bower_components/angular-upload/angular-upload.js"></script>
+    <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
+    <script src="bower_components/ng-file-upload-shim/ng-file-upload-shim.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -58,34 +63,31 @@
     <script src="scripts/controllers/buscaController.js"></script>
     <script src="scripts/controllers/teamController.js"></script>
     <script src="scripts/controllers/notificacaoController.js"></script>
+  ''<script src="scripts/controllers/usuario/homeController.js"></script>
     <script src="scripts/controllers/about.js"></script>
 
 
     <!-- endbuild -->
 </head>
 <body ng-app="clienteApp">
-    <div class="navbar navbar-fixed-top" data-activeslide="1" ng-controller="menuController">
-        <div class="container">
+   <nav class="navbar navbar-default navbar-fixed-top navbar navbar-inverse" ng-controller="menuController">
+     <div class="container">
+       <!-- Brand and toggle get grouped for better mobile display -->
+       <div class="navbar-header page-scroll">
+         <a class="navbar-brand page-scroll">Carona-me!</a>
+       </div>
 
-            <!-- .navbar-toggle is used as the toggle for collapsed navbar content -->
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-
-
-            <div class="nav-collapse collapse navbar-responsive-collapse">
-                <ul class="nav row">
-                    <li ng-repeat="menu in menus" data-slide="menu.slide" class="col-12 col-sm-2"><a id="'menu-link-' + menu.slide" ng-href={{menu.href}}><span ng-class="'glyphicon glyphicon-' + menu.class"></span> <span class="text">{{menu.nome}}</span></a></li>
-                </ul>
-                <div class="row">
-                    <div class="col-sm-2 active-menu"></div>
-                </div>
-            </div><!-- /.nav-collapse -->
-        </div><!-- /.container -->
-    </div><!-- /.navbar -->
-    <div data-ng-view></div>
+       <!-- Collect the nav links, forms, and other content for toggling -->
+       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+         <ul class="nav navbar-nav navbar-right ">
+           <li ng-repeat="menu in menus"><a ng-href={{menu.href}}><span ng-class="'glyphicon glyphicon-' + menu.class"></span> <span class="icon-bar">{{menu.nome}}</span></a></li>
+         </ul>
+       </div>
+       <!-- /.navbar-collapse -->
+     </div>
+     <!-- /.container-fluid -->
+   </nav>
+   <div data-ng-view></div>
 
 
 
