--- a/cliente/app/index.html
+++ b/cliente/app/index.html
@@ -56,6 +56,7 @@
     <script src="scripts/services/caronaService.js"></script>
     <script src="scripts/services/notificacaoService.js"></script>
     <script src="scripts/services/mainService.js"></script>
+    <script src="scripts/services/waitResponseService.js"></script>
     <script src="scripts/controllers/inicio/menuController.js"></script>
     <script src="scripts/controllers/usuario/caronaController.js"></script>
     <script src="scripts/controllers/inicio/mainController.js"></script>
