adicao do angular-translate

--- a/cliente/app/index.html
+++ b/cliente/app/index.html
@@ -45,6 +45,7 @@
     <script src="bower_components/angular-upload/angular-upload.js"></script>
     <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
     <script src="bower_components/ng-file-upload-shim/ng-file-upload-shim.js"></script>
+    <script src="bower_components/angular-translate/angular-translate.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
