funcao para alterar linguagem

--- a/cliente/app/index.html
+++ b/cliente/app/index.html
@@ -61,6 +61,7 @@
     <script src="scripts/controllers/inicio/menuController.js"></script>
     <script src="scripts/controllers/usuario/caronaController.js"></script>
     <script src="scripts/controllers/inicio/mainController.js"></script>
+    <script src="scripts/controllers/inicio/translate.js"></script>
     <script src="scripts/controllers/usuario/horarioController.js"></script>
     <script src="scripts/controllers/usuario/buscaController.js"></script>
     <script src="scripts/controllers/inicio/teamController.js"></script>
