Tela Notificacao Angularizado

--- a/cliente/app/index.html
+++ b/cliente/app/index.html
@@ -23,8 +23,9 @@
     <link rel="stylesheet" href="styles/usuario/carona.css">
     <link rel="stylesheet" href="styles/usuario/buscar.css">
     <link rel="stylesheet" href="styles/inicio/team.css">
-    <link rel="stylesheet" href="styles/usuario/notificacao.css">
+    <link rel="stylesheet" href="styles/usuario/solicitacao.css">
     <link rel="stylesheet" href="styles/usuario/home.css">
+    <link rel="stylesheet" href="styles/usuario/notificacao.css">
     <!-- endbuild -->
 
     <!-- build:js(.) scripts/vendor.js -->
@@ -66,6 +67,7 @@
     <script src="scripts/controllers/usuario/buscaController.js"></script>
     <script src="scripts/controllers/inicio/teamController.js"></script>
     <script src="scripts/controllers/usuario/notificacaoController.js"></script>
+    <script src="scripts/controllers/usuario/solicitacaoController.js"></script>
   ''<script src="scripts/controllers/usuario/homeController.js"></script>
     <script src="scripts/controllers/inicio/about.js"></script>
 
