--- a/cliente/app/index.html
+++ b/cliente/app/index.html
@@ -59,6 +59,7 @@
     <script src="scripts/services/solicitacaoService.js"></script>
     <script src="scripts/services/notificacaoService.js"></script>
     <script src="scripts/services/mainService.js"></script>
+    <script src="scripts/services/ApiInterceptorService.js"></script>
     <script src="scripts/services/waitResponseService.js"></script>
     <script src="scripts/controllers/inicio/menuController.js"></script>
     <script src="scripts/controllers/usuario/caronaController.js"></script>
@@ -71,7 +72,7 @@
     <script src="scripts/controllers/usuario/solicitacaoController.js"></script>
   ''<script src="scripts/controllers/usuario/homeController.js"></script>
     <script src="scripts/controllers/inicio/about.js"></script>
-
+   <script src="scripts/config/interceptorConfig.js"></script>
 
     <!-- endbuild -->
 </head>
