Placeholder fixed e translate dinamica concluida

--- a/cliente/app/index.html
+++ b/cliente/app/index.html
@@ -83,7 +83,8 @@
        <div class="navbar-header page-scroll">
          <a class="navbar-brand page-scroll">Carona-me!</a>
        </div>
-
+       <button ng-click="changeLanguage('pt')">pt</button>
+       <button ng-click="changeLanguage('en')">EN</button>
     <!--Gileade   <H2 translate='label.title'></H2> -->
        <!-- Collect the nav links, forms, and other content for toggling -->
        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
